--- a/source/assets/stylesheets/modules/_layout.css.scss
+++ b/source/assets/stylesheets/modules/_layout.css.scss
@@ -113,6 +113,18 @@
 }
 
 // ---------------------------------------------------------
+// The work page
+// ---------------------------------------------------------
+
+.layout--work {
+  @include grid-row;
+  
+  .layout--work-box {
+    @include grid-column($columns:6);
+  }
+}
+
+// ---------------------------------------------------------
 // The imprint page
 // ---------------------------------------------------------
 
@@ -125,7 +137,7 @@
 }
 
 // ---------------------------------------------------------
-// The imprint page
+// The footer
 // ---------------------------------------------------------
 
 .layout--footer {
