--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -7,18 +7,20 @@
     %ul.title-area
       %li.name
         %h1   
-          %a{:href => "/"} Home
+          %a{:href => "/"}= t("header.home")
       %li.toggle-topbar.menu-icon
-        %a{:href => "#"} Menu
+        %a{:href => "#"}= t("header.home")
               
     %section.top-bar-section
       %ul.left
+        %li{:class => ('active' if @work)}
+          %a{:href => "/work.html"}= t("header.work")
         %li{:class => ('active' if @about)}
-          %a{:href => "/about.html"} Über mich
+          %a{:href => "/about.html"}= t("header.about")
         %li{:class => ('active' if @blog)}
-          = link_to "Blog", blog.articles.first.url
+          = link_to t("header.blog"), blog.articles.first.url
         %li{:class => ('active' if @contact)}
-          %a{:href => "/contact.html"} Kontakt  
+          %a{:href => "/contact.html"}= t("header.contact")
         
 -# ---------------------------------------------------------
 -# The HEADLINE 
@@ -27,6 +29,6 @@
 .layout--full
   .layout--full-box
     .header--headline
-      Webanwendungs- und Frontendentwicklung 
+      = t("header.header")
     .header--subheadline
-      ralph möcklinghoff
+      = t("header.sub_header")
