Styles and more

--- a/source/assets/stylesheets/app.css.scss
+++ b/source/assets/stylesheets/app.css.scss
@@ -51,6 +51,7 @@ $icons-spacing: 20px;
 @import "base/typography";
 
 @import "modules/layout";
+@import "modules/navigation";
 @import "modules/header";
 @import "modules/content";
 @import "modules/blog";
