--- a/source/work.haml
+++ b/source/work.haml
@@ -7,11 +7,11 @@
     .content--main-copy
       = lorem.sentences 3
       
-  .layout--work-box
+  .layout--work-box-side
     = image_tag lorem.image('350x150')
     
 .layout--work
-  .layout--work-box
+  .layout--work-box-side
     = image_tag lorem.image('350x150')
       
     
@@ -22,7 +22,7 @@
       = lorem.sentences 4
         
 .layout--work
-  .layout--work-box.content
+  .layout--work-box-side
     = image_tag lorem.image('350x150')
 
   .layout--work-box.content
@@ -39,7 +39,7 @@
       = lorem.sentences 5
         
       
-  .layout--work-box
+  .layout--work-box-side
     = image_tag lorem.image('350x150')
 
  
