--- a/source/assets/stylesheets/app.css.scss
+++ b/source/assets/stylesheets/app.css.scss
@@ -43,6 +43,12 @@ $icons-spacing: 20px;
 @include all-icons-sprites;
 
 // ---------------------------------------------------------
+// Compass border radius 
+// ---------------------------------------------------------
+
+@import "compass/css3/border-radius";
+
+// ---------------------------------------------------------
 // Modules with site specific styles
 // ---------------------------------------------------------
 
