--- a/source/assets/stylesheets/base/_colors.css.scss
+++ b/source/assets/stylesheets/base/_colors.css.scss
@@ -4,4 +4,5 @@
 // ---------------------------------------------------------
 
 $eye-catcher: #00b1ff;
-$light-test-color: #999;
+$light-text-color: #999;
+$light-grey-color: #eee;
