--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -13,8 +13,8 @@
               
     %section.top-bar-section
       %ul.right
-        %li{:class => ('active' if @work)}
-          %a{:href => "/work.html"}= t("header.work")
+        -# %li{:class => ('active' if @work)}
+        -#   %a{:href => "/work.html"}= t("header.work")
         %li{:class => ('active' if @about)}
           %a{:href => "/about.html"}= t("header.about")
         %li{:class => ('active' if @blog)}
