Updated content for all pages

--- a/source/about.haml
+++ b/source/about.haml
@@ -9,11 +9,12 @@
       
       %h6.content--main-headline= t("about.header_customer")
       %p.content--main-copy= t("about.customer")
-      %p.content--main-copy= t("about.brands", :link_1 => "#{link_to('Inveos', 'http://middlemanapp.com')}",
-                            :link_2 => "#{link_to('zweitag', 'http://foundation.zurb.com')}",
-                            :link_3 => "#{link_to('ANTS with FRIENDS', 'http://sass-lang.com')}",
-                            :link_4 => "#{link_to('mee-moo', 'http://sass-lang.com')}",
-                            :link_5 => "#{link_to('brandmarken.', 'http://haml.info')}" )
+      %p.content--main-copy= t("about.brands", 
+                            :link_1 => "#{link_to('SinnerSchrader GmbH', 'https://sinnerschrader.com/de/')}",
+                            :link_2 => "#{link_to('Zweitag GmbH', 'https://www.zweitag.de/de')}",
+                            :link_3 => "#{link_to('brandmarken.', 'http://www.brandmarken.de/')}",
+                            :link_4 => "#{link_to('Ants with Friends', 'http://www.antswithfriends.net/')}",
+                            :link_5 => "#{link_to('Inveos GmbH.', 'http://www.inveos.com/')}" )
   
   .layout--about-links
     
