--- a/source/assets/stylesheets/modules/_content.css.scss
+++ b/source/assets/stylesheets/modules/_content.css.scss
@@ -70,6 +70,10 @@
 // Special content classes 
 // ---------------------------------------------------------
 
+.content--banner {
+  padding-bottom: rem-calc(10);
+}
+
 .content--date {
   @include copy-font(rem-calc(16));
   padding-bottom: rem-calc(10);
@@ -77,5 +81,5 @@
 
 .content--event {
   @include copy-font(rem-calc(16));
-  padding-bottom: rem-calc(30);
+  padding-bottom: rem-calc(15);
 }
