Link to keybase for public gpg key

--- a/source/contact.haml
+++ b/source/contact.haml
@@ -6,7 +6,7 @@
     %h6.content--main-headline= t("contact.header_address")
     %p.content--main-contact= t("contact.phone")
     %p.content--main-contact= t("contact.mail")
-    
+    %p.content--main-contact= link_to('Public GPG Key', 'https://keybase.io/ralphathamburg')
     
   .layout--contact-box-large 
     %h6.content--main-headline= t("contact.header_where")
