--- a/source/contact.haml
+++ b/source/contact.haml
@@ -6,7 +6,9 @@
     %h6.content--main-headline= t("contact.header_address")
     %p.content--main-contact= t("contact.phone")
     %p.content--main-contact= t("contact.mail")
-    %p.content--main-contact= link_to('Public GPG Key', 'https://keybase.io/ralphathamburg')
+    %p.content--main-contact= link_to('Öffentlicher PGP Schlüssel', 'https://keybase.io/ralphathamburg')
+    
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4739.465841365701!2d9.959843!3d53.562535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcd378c10a85d5041!2sbetahaus+-+coworking+hamburg!5e0!3m2!1sde!2sde!4v1418214384244" width="100%" height="250" frameborder="0" style="border:0"></iframe>
     
   .layout--contact-box-large 
     %h6.content--main-headline= t("contact.header_where")
