--- a/source/index.haml
+++ b/source/index.haml
@@ -74,7 +74,7 @@
     .content--sub-headline
       = t("home.header_coworking")
     .content--sub-copy
-      = t("home.coworking", :link => "#{link_to('Betahaus 2.0', 'http://hamburg.betahaus.de')}")
+      = t("home.coworking", :link => "#{link_to('Betahaus', 'http://hamburg.betahaus.de')}")
         
   .layout--small-box
     .content--sub-headline
