--- a/source/assets/stylesheets/modules/_navigation.css.scss
+++ b/source/assets/stylesheets/modules/_navigation.css.scss
@@ -6,5 +6,5 @@
 // ---------------------------------------------------------
 
 .navigation {
-  padding-bottom: rem-calc(20);
+  padding: rem-calc(5 0 20 0);
 }
