--- a/source/assets/stylesheets/modules/_header.css.scss
+++ b/source/assets/stylesheets/modules/_header.css.scss
@@ -4,8 +4,12 @@
 // ---------------------------------------------------------
 
 .header--headline {
-  @include headline-font(rem-calc(48));
+  @include headline-font(rem-calc(28));
   padding-bottom: rem-calc(20);
+  
+  @media #{$medium-up} {
+    @include headline-font(rem-calc(48));
+  }
 }
 
 .header--subheadline {
