--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -9,7 +9,7 @@
         %h1   
           %a{:href => "/", :class => 'header--home'}= t("header.ralph")
       %li.toggle-topbar.menu-icon
-        %a{:href => "#"}= t("header.home")
+        %a{:href => "#"}= t("header.menu")
               
     %section.top-bar-section
       %ul.right
