--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -25,3 +25,20 @@
     
     = partial "footer" 
     = javascript_include_tag  "all"
+    
+    / Piwik
+    :javascript
+      var _paq = _paq || [];
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//piwik.ralph-moecklinghoff.de/";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', 1]);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    %noscript
+      %p
+        %img{:alt => "", :src => "//piwik.ralph-moecklinghoff.de/piwik.php?idsite=1", :style => "border:0;"}/
+    / End Piwik Code
