--- a/source/partials/_footer.haml
+++ b/source/partials/_footer.haml
@@ -1,3 +1,7 @@
 .layout--footer
   .layout--footer-box.footer
-    = t("footer.text", :date => "#{copyright_years("2001")}", :imprint => "#{link_to('Impressum', '/imprint.html')}")
+  
+    - if @imprint
+      = t("footer.text", :date => "#{copyright_years("2001")}", :imprint => "")
+    - else
+      = t("footer.text", :date => "#{copyright_years("2001")}", :imprint => "#{link_to('Impressum', '/imprint.html', :rel => 'nofollow')}")
