--- a/source/index.haml
+++ b/source/index.haml
@@ -15,9 +15,9 @@
 .layout--visual
   .layout--visual-box
     %ul.layout--visual-images
-      %li= image_tag 'code.jpg'
-      %li= image_tag 'html.jpg'
-      %li= image_tag 'diagram.jpg'
+      %li= image_tag 'code.jpg', :alt => "RubyOnRails"
+      %li= image_tag 'html.jpg', :alt => "HTML / SASS"
+      %li= image_tag 'diagram.jpg', :alt => "Entwicklung"
 
 
 -# ---------------------------------------------------------
