--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -11,7 +11,7 @@
       %li.toggle-topbar.menu-icon
         %a{:href => "#"}= t("header.menu")
               
-    %section.top-bar-section
+    %div.top-bar-section
       %ul.right
         -# %li{:class => ('active' if @work)}
         -#   %a{:href => "/work.html"}= t("header.work")
