--- a/source/work.haml
+++ b/source/work.haml
@@ -8,11 +8,11 @@
       = lorem.sentences 3
       
   .layout--work-box-side
-    = image_tag lorem.image('350x150')
+    = image_tag lorem.image('350x150'), :alt => ""
     
 .layout--work
   .layout--work-box-side
-    = image_tag lorem.image('350x150')
+    = image_tag lorem.image('350x150'), :alt => ""
       
     
   .layout--work-box.content
@@ -23,7 +23,7 @@
         
 .layout--work
   .layout--work-box-side
-    = image_tag lorem.image('350x150')
+    = image_tag lorem.image('350x150'), :alt => ""
 
   .layout--work-box.content
     .content--main-headline
@@ -40,6 +40,6 @@
         
       
   .layout--work-box-side
-    = image_tag lorem.image('350x150')
+    = image_tag lorem.image('350x150'), :alt => ""
 
  
