New logo for re publica 2016

--- a/source/partials/_dates.haml
+++ b/source/partials/_dates.haml
@@ -1,6 +1,6 @@
 .content--banner
-  %a{:href => "http://re-publica.de", :title => "re:publica 15 - FINDING EUROPE"}
-    %img{:alt => "re:publica 15 - FINDING EUROPE", :src => "http://re-publica.de/files/banner/rp15_banner_2.png"}/
+  %a{:href => "http://re-publica.de", :title => "re:publica 16 - TEN"}
+    %img{:alt => "re:publica 16 - TEN", :src => "http://re-publica.de/files/banner/rpTEN_300x250_1.png"}/
 
 - data.events.dates.each do |d|     
   .content--date
