Added some new references

--- a/source/about.haml
+++ b/source/about.haml
@@ -14,7 +14,8 @@
                             :link_2 => "#{link_to('Zweitag GmbH', 'https://www.zweitag.de/de')}",
                             :link_3 => "#{link_to('brandmarken.', 'http://www.brandmarken.de/')}",
                             :link_4 => "#{link_to('Ants with Friends', 'http://www.antswithfriends.net/')}",
-                            :link_5 => "#{link_to('Inveos GmbH.', 'http://www.inveos.com/')}" )
+                            :link_5 => "#{link_to('Inveos GmbH.', 'http://www.inveos.com/')}" ),
+                            :link_6 => "#{link_to('Brandslisten GmbH.', 'http://www.brandslisten.com/')}" )
   
   .layout--about-links
     
